// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/server public exports > default condition (pages-safe) > should not include a breaking change 1`] = `
[
  "buildClerkProps",
  "clerkClient",
  "clerkFrontendApiProxy",
  "clerkMiddleware",
  "createClerkClient",
  "createFrontendApiProxyHandlers",
  "createRouteMatcher",
  "getAuth",
  "reverificationError",
  "reverificationErrorResponse",
  "verifyToken",
]
`;

exports[`/server public exports > react-server condition > should not include a breaking change 1`] = `
[
  "auth",
  "buildClerkProps",
  "clerkClient",
  "clerkFrontendApiProxy",
  "clerkMiddleware",
  "createClerkClient",
  "createFrontendApiProxyHandlers",
  "createRouteMatcher",
  "currentUser",
  "getAuth",
  "reverificationError",
  "reverificationErrorResponse",
  "verifyToken",
]
`;
